@@ -101,8 +101,6 @@ static int arm_check_access(struct cpu *cpu, int ap, int dav, int user)
 /*
  *  arm_translate_v2p_mmu():
  *
- *  Don't call this function if userland_emul is non-NULL, or cpu is NULL.
- *
  *  Return values:
  *	0  Failure
  *	1  Success, the page is readable only
