@@ -207,8 +207,6 @@ static int ppc_vtp32(struct cpu *cpu, uint32_t vaddr, uint64_t *return_paddr,
 /*
  *  ppc_translate_v2p():
  *
- *  Don't call this function if userland_emul is non-NULL, or cpu is NULL.
- *
  *  Return values:
  *	0  Failure
  *	1  Success, the page is readable only
