@@ -105,6 +105,8 @@ MACHINE_SETUP(alpha)
 	    &(rpb.rpb_phys), 0x14000);
 	strlcpy((char *)&(rpb.rpb_magic), "HWRPB", 8);
 	store_64bit_word_in_host(cpu, (unsigned char *)
+	    &(rpb.rpb_version), HWRPB_DSRDB_MINVERS);
+	store_64bit_word_in_host(cpu, (unsigned char *)
 	    &(rpb.rpb_size), sizeof(struct rpb));
 	store_64bit_word_in_host(cpu, (unsigned char *)
 	    &(rpb.rpb_page_size), 8192);
