@@ -4579,4 +4579,6 @@ Changelog for GXemul:
 		adding implementations of "LDS Rm,MACH", and "LDS Rm,MACL".
 20110902	Reviving the old legacy Alpha CPU support, which was removed
 		20090703 (i.e. NOT using the new framework).
+20110906	Slowly continuing on the Alpha emulation mode: going through
+		the existing virtual memory and PALcode stuff.
 
